packages/svelte/tests/validator/samples/lowercase-component-rendering/input.svelte
<script>
	const component = $state({});
</script>

<component.component></component.component>

<weird.element></weird.element>
