packages/svelte/tests/compiler-errors/samples/runes-wrong-state-placement/main.svelte
<script>
	function a(x) {}
	a($state(1));
</script>
